[gd_scene load_steps=2 format=3 uid="uid://eals8m240w30"]

[ext_resource type="Script" uid="uid://ledfamf3oagp" path="res://Scripts/GUI.gd" id="1"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="GUI" type="MarginContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 1135.0
offset_bottom = 141.0
mouse_filter = 0
script = ExtResource("1")

[node name="HBoxContainer" type="GridContainer" parent="GUI"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="GridContainer" type="GridContainer" parent="GUI/HBoxContainer"]
layout_mode = 2
columns = 2

[node name="Time" type="Label" parent="GUI/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Time"

[node name="TimeLabel" type="Label" parent="GUI/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="Best" type="Label" parent="GUI/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Best"

[node name="BestTimeLabel" type="Label" parent="GUI/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="Last" type="Label" parent="GUI/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Last"

[node name="LastTimeLabel" type="Label" parent="GUI/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusContainer" type="VBoxContainer" parent="GUI/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="LifeContainer" type="HBoxContainer" parent="GUI/HBoxContainer/StatusContainer"]
layout_mode = 2
alignment = 2

[node name="LifeLabel" type="Label" parent="GUI/HBoxContainer/StatusContainer/LifeContainer"]
layout_mode = 2
text = "Life"

[node name="LifeProgressBar" type="ProgressBar" parent="GUI/HBoxContainer/StatusContainer/LifeContainer"]
custom_minimum_size = Vector2(128, 16)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
rounded = true

[node name="FuelContainer" type="HBoxContainer" parent="GUI/HBoxContainer/StatusContainer"]
layout_mode = 2

[node name="FuelLabel" type="Label" parent="GUI/HBoxContainer/StatusContainer/FuelContainer"]
layout_mode = 2
text = "Fuel"
horizontal_alignment = 2

[node name="FuelProgressBar" type="ProgressBar" parent="GUI/HBoxContainer/StatusContainer/FuelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0

[node name="SpeedContainer" type="HBoxContainer" parent="GUI/HBoxContainer/StatusContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="GUI/HBoxContainer/StatusContainer/SpeedContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Speed"
horizontal_alignment = 2

[node name="SpeedProgressBar" type="ProgressBar" parent="GUI/HBoxContainer/StatusContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
